--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "bootstrap": "^5.2.3",
+    "axios": "^1.3.6",
+    "bootstrap": "^4.6.2",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "jquery": "^3.6.4",
     "node-sass": "^8.0.0",
+    "popper.js": "^1.16.1",
     "vue": "^2.7.14"
   },
   "devDependencies": {
