--- a/package.json
+++ b/package.json
@@ -8,11 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/vue-fontawesome": "^2.0.10",
     "axios": "^1.3.6",
     "bootstrap": "^4.6.2",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "dotenv": "^16.0.3",
     "jquery": "^3.6.4",
+    "js-cookie": "^3.0.4",
+    "js-cookies": "^1.0.4",
     "node-sass": "^8.0.0",
     "popper.js": "^1.16.1",
     "vue": "^2.7.14"
