--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "js-cookies": "^1.0.4",
     "node-sass": "^8.0.0",
     "popper.js": "^1.16.1",
-    "vue": "^2.7.14"
+    "vue": "^2.7.14",
+    "vue-router": "^3.6.5",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
