--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "node-sass": "^8.0.0",
     "popper.js": "^1.16.1",
     "vue": "^2.7.14",
+    "vue-i18n": "^8.28.2",
     "vue-router": "^3.6.5",
     "vuex": "^3.6.2"
   },
